Ci tests and new features (#48)
* ci: add github actions yml

* feat: add order cancel, change status, upload cover

* fix tests to use latest changes

* Use same java version as pom for ci

* configure the maven compiler to use Lombok's annotation processor

* Remove javax dependencies as they are conflicting and use jakarta

* try clean install

* remove duplicate classes
